[project]
name = "jpu"
description = "JAX + Units"
authors = [{ name = "Dan Foreman-Mackey", email = "foreman.mackey@gmail.com" }]
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT License" }
classifiers = [
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: MIT License",
]
dynamic = ["version"]
dependencies = ["jax", "jaxlib", "pint"]

[project.urls]
"Homepage" = "https://github.com/dfm/jpu"
"Source" = "https://github.com/dfm/jpu"
"Bug Tracker" = "https://github.com/dfm/jpu/issues"

[project.optional-dependencies]
test = ["pytest"]

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/jpu/jpu_version.py"

[tool.black]
target-version = ["py39"]
line-length = 88

[tool.ruff]
line-length = 88
target-version = "py39"
select = ["F", "I", "E", "W", "YTT", "B", "Q", "PLE", "PLR", "PLW", "UP"]
ignore = ["PLR0912", "PLR0913"]
exclude = []

[tool.ruff.isort]
known-first-party = ["jpu"]
combine-as-imports = true
